# mipt2017

lab0/: Lab0.hs
lab1/: Lab1.hs
lab2/: Lab2.cabal  Lab2.hs
lab3/: Lab3.cabal  Lab3.hs  TestUserAgent.hs
seminars/: Sem9.hs
zachyot/: Main.cabal  Main.hs
