name:                Lab2
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/Lab2#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable Lab2-exe
  hs-source-dirs:      .
  main-is:             Lab2.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mtl
                     , bytestring
                     , text
                     , network
                     , http-conduit
                     , directory
                     , random
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/Lab2
