name:                Lab3
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/Lab2#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable Lab2-exe
  hs-source-dirs:      .
  main-is:             Lab3.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mtl
                     , bytestring
                     , text
                     , network
                     , xml-conduit
                     , http-conduit
                     , html-conduit
                     , directory
                     , random
                     , HTTP
                     , split
                     , aeson
  default-language:    Haskell2010


executable TestUserAgent
    hs-source-dirs:      .
    main-is:             TestUserAgent.hs
    ghc-options:         -threaded -rtsopts -with-rtsopts=-N
    build-depends:       base
                       , mtl
                       , bytestring
                       , text
                       , network
                       , xml-conduit
                       , http-conduit
                       , html-conduit
                       , directory
                       , http-client
                       , http-types
                       , http-client-tls
                       , random
                       , HTTP
                       , split
                       , aeson
    default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/Lab3
